<resources>
    <string name="app_name">Recycle It</string>
    <string name="title_activity_menu">menu</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="perfil">Perfil</string>
    <string name="opciones">Opciones</string>
    <string name="mapa">Mapa</string>
    <string name="que_deseas_reciclar">¿Que deseas reciclar?</string>
    <string name="carton">Carton.</string>
    <string name="plasticos">Plasticos.</string>
    <string name="vidrio">Vidrio.</string>
    <string name="aceite">Aceite.</string>
    <string name="otros">Otros.</string>
    <string name="electr_nica">Electrónica.</string>
    <string name="atras">Atras</string>
    <string name="btnSiguiente">Siguiente</string>
    <string name="recolector">Recolector.</string>
    <string name="punto_m_s_cercano">Punto más cercano.</string>
    <string name="tituloPopup2">Forma de Reciclar.</string>
    <string name="parrafoPopUp2">Escoge una de las dos opciones, ir al punto de reciclaje o contactar con un recolector.</string>
    <string name="btnAceptar">Aceptar</string>
    <string name="imagenPerfil">perfil</string>
    <string name="txtnumero">Numero de contacto: . . .</string>
    <string name="txtperfil">Perfil.</string>
    <string name="txtedad">Edad: . . .</string>
    <string name="txtnombre">Nombre: . . .</string>
    <string name="txtsaludo">Bienvenido . . .</string>
    <string name="txtubicacion">Ubicación: . . .</string>
    <string name="txtcorreo">Correo: . . .</string>
    <string name="imgagregar">imgAgregar</string>
    <string name="etxtnombre">Nombre:</string>
    <string name="etxtedad">Edad:</string>
    <string name="etxtnumerocontacto">Numero de contacto:</string>
    <string name="etxtcorreo">Correo:</string>
    <string name="etxtubicacion">Ubicación:</string>
    <string name="etxtpassword">Password:</string>
    <string name="btnAddUser">Enviar</string>
    <string name="txtTituloRecolectores">Recolectores</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>